[project]
name = "tap-f1"
version = "0.0.1"
description = "`tap-f1` is a Singer tap for F1, built with the Meltano Singer SDK."
authors = [{ name = "Reuben Frankel", email = "reubenfrankel@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "F1",
]
dependencies = [
    "singer-sdk~=0.44.2",
    "requests~=2.32.3",
    "requests-cache>=1.2.1,<2",
]

[project.optional-dependencies]
s3 = ["fs-s3fs~=1.1.1"]

[project.scripts]
tap-f1 = "tap_f1.tap:TapF1.cli"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "singer-sdk[testing]~=0.44.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN001",  # missing-type-function-argument
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN201",  # missing-return-type-undocumented-public-function
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
src = ["tap_f1"]
target-version = "py39"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_f1"]

[tool.ruff.pydocstyle]
convention = "google"
